fix: correct table cell vertical alignment in general.scss and ensure newline at end of styles.min.css for consistency

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -1031,8 +1031,10 @@ body.logged-in {
 }
 
 .wp-block-table {
-	td, th {
-		vertical-align: middle;
+	table {
+		td, th {
+			vertical-align: middle;
+		}
 	}
 }
 
